move jupyter to benchmark

--- a/src/bench/comparison.ipynb
+++ b/src/bench/comparison.ipynb
@@ -45,7 +45,7 @@
    ],
    "source": [
     "# Extract criteria from the csv file\n",
-    "path = os.path.join(path_to_root, \"tests\", \"assets\", \"e2e_variants\", \"comparison_criteria.csv\")\n",
+    "path = os.path.join(path_to_root,  \"src\", \"bench\", \"comparison_criteria.csv\")\n",
     "print(f\"Data path: {path}\")\n",
     "variants = []\n",
     "with open(path, \"rt\") as inputf:\n",
@@ -2100,6 +2100,8 @@
    ],
    "source": [
     "# Run AutoACMG predictions\n",
+    "def append_row(df, row):\n",
+    "    return pd.concat([df, pd.DataFrame([row], columns=row.index)]).reset_index(drop=True)\n",
     "\n",
     "# Create a pandas DataFrame\n",
     "stats = pd.DataFrame(columns=[\n",
@@ -2159,9 +2161,10 @@
     "    except Exception as e:\n",
     "        print(f\"Exception was raised for {var[0]} in InterVar:\\n{e}\")\n",
     "\n",
-    "    stats.append(record, ignore_index=True)\n",
+    "    print(f\"Record for {var[0]}: {record}\")\n",
+    "    stats = append_row(stats, pd.Series(record))\n",
     "\n",
-    "output_path = os.path.join(path_to_root, \"src\", \"jupyter\", \"stats.csv\")\n",
+    "output_path = os.path.join(path_to_root, \"src\", \"bench\", \"stats.csv\")\n",
     "stats.to_csv(output_path, index=False)\n"
    ]
   }
