--- a/src/bench/results_analysis.ipynb
+++ b/src/bench/results_analysis.ipynb
@@ -209,7 +209,7 @@
    ],
    "source": [
     "# Load the CSV file\n",
-    "path_to_csv = os.path.join(os.path.abspath(''), 'src', 'bench', 'results_clean.csv')\n",
+    "path_to_csv = os.path.join(os.path.abspath(''), 'src', 'bench', 'results.csv')\n",
     "print(f\"Path: {path_to_csv}\")\n",
     "df = pd.read_csv(path_to_csv)\n",
     "\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "id": "3796e055",
    "metadata": {},
    "outputs": [
@@ -401,36 +401,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Minimum</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Maximum</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Range</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>2.888889</td>\n",
-       "      <td>0.800000</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>3.888889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>Q1 (25th percentile)</td>\n",
        "      <td>0.600000</td>\n",
        "      <td>0.333333</td>\n",
@@ -440,7 +410,7 @@
        "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>4</th>\n",
        "      <td>Q3 (75th percentile)</td>\n",
        "      <td>0.750000</td>\n",
        "      <td>0.666667</td>\n",
@@ -450,7 +420,7 @@
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>5</th>\n",
        "      <td>IQR</td>\n",
        "      <td>0.150000</td>\n",
        "      <td>0.333333</td>\n",
@@ -468,45 +438,33 @@
        "0                  Mean                       0.683195   \n",
        "1    Standard Deviation                       0.157648   \n",
        "2                Median                       0.666667   \n",
-       "3               Minimum                       0.500000   \n",
-       "4               Maximum                       1.000000   \n",
-       "5                 Range                       0.500000   \n",
-       "6  Q1 (25th percentile)                       0.600000   \n",
-       "7  Q3 (75th percentile)                       0.750000   \n",
-       "8                   IQR                       0.150000   \n",
+       "3  Q1 (25th percentile)                       0.600000   \n",
+       "4  Q3 (75th percentile)                       0.750000   \n",
+       "5                   IQR                       0.150000   \n",
        "\n",
        "   Intervar True Positives Ratio  AutoACMG False Negatives Ratio  \\\n",
        "0                       0.529740                        0.508120   \n",
        "1                       0.260312                        0.501176   \n",
        "2                       0.500000                        0.333333   \n",
-       "3                       0.166667                        0.111111   \n",
-       "4                       1.000000                        3.000000   \n",
-       "5                       0.833333                        2.888889   \n",
-       "6                       0.333333                        0.200000   \n",
-       "7                       0.666667                        0.600000   \n",
-       "8                       0.333333                        0.400000   \n",
+       "3                       0.333333                        0.200000   \n",
+       "4                       0.666667                        0.600000   \n",
+       "5                       0.333333                        0.400000   \n",
        "\n",
        "   Intervar False Negatives Ratio  AutoACMG False Positives Ratio  \\\n",
        "0                        0.620971                        0.463146   \n",
        "1                        0.233786                        0.239276   \n",
        "2                        0.600000                        0.400000   \n",
-       "3                        0.200000                        0.166667   \n",
-       "4                        1.000000                        1.000000   \n",
-       "5                        0.800000                        0.833333   \n",
-       "6                        0.500000                        0.333333   \n",
-       "7                        0.762500                        0.500000   \n",
-       "8                        0.262500                        0.166667   \n",
+       "3                        0.500000                        0.333333   \n",
+       "4                        0.762500                        0.500000   \n",
+       "5                        0.262500                        0.166667   \n",
        "\n",
        "   Intervar False Positives Ratio  \n",
        "0                        0.721310  \n",
        "1                        0.609083  \n",
        "2                        0.500000  \n",
-       "3                        0.111111  \n",
-       "4                        4.000000  \n",
-       "5                        3.888889  \n",
-       "6                        0.333333  \n",
-       "7                        1.000000  \n",
-       "8                        0.666667  "
+       "3                        0.333333  \n",
+       "4                        1.000000  \n",
+       "5                        0.666667  "
       ]
      },
      "metadata": {},
