--- a/src/bench/results_analysis_v2.ipynb
+++ b/src/bench/results_analysis_v2.ipynb
@@ -491,7 +491,7 @@
     "display(kappa_df)\n",
     "\n",
     "# Export the results to a CSV file\n",
-    "kappa_df.to_csv(\"cohens_kappa_results.csv\", index=False)"
+    "# kappa_df.to_csv(\"cohens_kappa_results.csv\", index=False)"
    ]
   },
   {
