--- a/src/bench/results_analysis.ipynb
+++ b/src/bench/results_analysis.ipynb
@@ -496,6 +496,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "41e54faf-0908-49de-a001-f3958ba9015d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_conflicting_criteria(row):\n",
+    "    criteria_to_remove = {\n",
+    "        'PVS1': ['PP3', 'PM4', 'BP4'],\n",
+    "        'BA1': ['BS1', 'BS2'],\n",
+    "        'PM1': ['BP3', 'PP2'],\n",
+    "        'PM2': ['BS1', 'BS2'],\n",
+    "        'PM4': ['PP3']\n",
+    "    }\n",
+    "    \n",
+    "    autoacmg_criteria = row['AutoACMG Criteria'].split(';')\n",
+    "    autoacmg_false_positives = row['AutoACMG False Positives'].split(';')\n",
+    "    \n",
+    "    for key, values in criteria_to_remove.items():\n",
+    "        if key in autoacmg_criteria:\n",
+    "            autoacmg_criteria = [c for c in autoacmg_criteria if c not in values]\n",
+    "            autoacmg_false_positives = [c for c in autoacmg_false_positives if c not in values]\n",
+    "    \n",
+    "    row['AutoACMG Criteria'] = ';'.join(autoacmg_criteria)\n",
+    "    row['AutoACMG False Positives'] = ';'.join(autoacmg_false_positives)\n",
+    "    \n",
+    "    return row\n",
+    "\n",
+    "# Apply the function to the dataframe\n",
+    "df = df.apply(remove_conflicting_criteria, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "d3cd8e0c-20e8-4c51-acb5-6810c4697b25",
    "metadata": {},
