--- a/src/bench/results_analysis.ipynb
+++ b/src/bench/results_analysis.ipynb
@@ -495,6 +495,286 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94741f75",
+   "metadata": {},
+   "source": [
+    "## Add more info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb386d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the CSV file\n",
+    "path_to_csv = os.path.join(os.path.abspath(''), 'src', 'bench', 'cohens_kappa_results.csv')\n",
+    "print(f\"Path: {path_to_csv}\")\n",
+    "kappa_df = pd.read_csv(path_to_csv)\n",
+    "kappa_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93bd8e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_variants_and_genes_with_criteria(kappa_df, results_df):\n",
+    "    criteria_counts = []\n",
+    "    gene_counts = []\n",
+    "    \n",
+    "    for criteria in kappa_df['Criteria']:\n",
+    "        count_variants = results_df['Expected Criteria'].str.contains(criteria).sum()\n",
+    "        genes = results_df.loc[results_df['Expected Criteria'].str.contains(criteria), 'Variant']\n",
+    "        unique_genes = genes.str.extract(r'\\(([^)]+)\\)')[0].nunique()\n",
+    "\n",
+    "        criteria_counts.append(count_variants)\n",
+    "        gene_counts.append(unique_genes)\n",
+    "    \n",
+    "    kappa_df['Number of Variants'] = criteria_counts\n",
+    "    kappa_df['Number of Genes'] = gene_counts\n",
+    "    \n",
+    "    return kappa_df\n",
+    "\n",
+    "df_plus = count_variants_and_genes_with_criteria(kappa_df, df)\n",
+    "df_plus.to_csv(\"kappa_plus.csv\", index=False)\n",
+    "df_plus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d33e09b",
+   "metadata": {},
+   "source": [
+    "### False Negatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adc25bf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the CSV file\n",
+    "path_to_csv = os.path.join(os.path.abspath(''), 'src', 'bench', 'tmp', 'results.csv')\n",
+    "print(f\"Path: {path_to_csv}\")\n",
+    "res_df = pd.read_csv(path_to_csv)\n",
+    "res_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88b4bca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find missing data for PM2,..\n",
+    "def find_error_in_response(df):\n",
+    "    # Filter rows with PM2 in Expected Criteria\n",
+    "    pm2_variants = df[df['Expected Criteria'].str.contains(\"PP3\")]\n",
+    "    \n",
+    "    # Check if the error message is in the AutoACMG Full Response column\n",
+    "    pm2_variants['Error Present'] = pm2_variants['AutoACMG Full Response'].str.contains(\"Missing dbNSFP data\")\n",
+    "    \n",
+    "    return pm2_variants[['Variant', 'Expected Criteria', 'AutoACMG Full Response', 'Error Present']]\n",
+    "\n",
+    "# Apply the function\n",
+    "result_df = find_error_in_response(res_df)\n",
+    "print(result_df[\"Error Present\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82b1e584",
+   "metadata": {},
+   "source": [
+    "### Missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980bbcf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the CSV file\n",
+    "path_to_csv = os.path.join(os.path.abspath(''), 'src', 'bench', 'bp7_stats.csv')\n",
+    "print(f\"Path: {path_to_csv}\")\n",
+    "bp7_df = pd.read_csv(path_to_csv)\n",
+    "bp7_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7fe0e82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find missing data for PM2,..\n",
+    "patt = [\n",
+    "    \"Missing CADD\",\n",
+    "    \"Missing dbscsnv\",\n",
+    "    \"Missing SpliceAI\"\n",
+    "]\n",
+    "def err_pres(details: str):\n",
+    "    for p in patt:\n",
+    "        if details.str.contains(p):\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def find_error_in_response(df):\n",
+    "    # Filter rows with PM2 in Expected Criteria\n",
+    "    pm2_variants = df[df['Expected Criteria'].str.contains(\"BP7\")]\n",
+    "\n",
+    "    error_conditions = pm2_variants['AutoACMG Full Response'].apply(\n",
+    "        lambda x: (\"Missing CADD\" in x) or (\"Missing dbscsnv\" in x) and (\"Missing SpliceAI\" in x)\n",
+    "    )\n",
+    "    # Check if the error message is in the AutoACMG Full Response column\n",
+    "    pm2_variants['Error Present'] = error_conditions\n",
+    "    \n",
+    "    return pm2_variants[['Variant', 'Expected Criteria', 'AutoACMG Full Response', 'Error Present']]\n",
+    "\n",
+    "# Apply the function\n",
+    "result_df = find_error_in_response(bp7_df)\n",
+    "result_df[\"Error Present\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b335a8a",
+   "metadata": {},
+   "source": [
+    "### VCEP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0edab4c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def extract_genes(df):\n",
+    "    # Define a function to extract gene names from the Variant column\n",
+    "    def get_gene_name(variant):\n",
+    "        match = re.search(r'\\((.*?)\\)', variant)\n",
+    "        if match:\n",
+    "            return match.group(1)\n",
+    "        return None\n",
+    "    \n",
+    "    # Apply the function to the Variant column and drop None values\n",
+    "    df['Gene'] = df['Variant'].apply(get_gene_name)\n",
+    "    \n",
+    "    # Get the unique list of gene names\n",
+    "    gene_list = df['Gene'].dropna().unique().tolist()\n",
+    "    \n",
+    "    return gene_list\n",
+    "\n",
+    "# Apply the function to get the list of genes\n",
+    "gene_list = extract_genes(df)\n",
+    "print(gene_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c414ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "VCEP_NO_EFFECT = {\n",
+    "    'HRAS': \"PS2;PM4;PM6;PP3;BP2;BP3\", \n",
+    "    'PAH': \"PM2;PM3;PM4;PM5;PP1;PP3;BS4;BP5\", \n",
+    "    'MYH7': \"PS1;BP4\", \n",
+    "    'GAMT': \"PVS1;PM3;PM4\", \n",
+    "    'KCNQ4': \"PVS1;PM3;PM4;PM6;PP1;BP3;BP7\", \n",
+    "    'KRAS': \"PM4;PP3;BP3;BP4;BP5\", \n",
+    "    'BRAF': \"PM4;PM6;PP3;BP2;BP3\", \n",
+    "    'GAA': \"PVS1;PS1;PM3;PM4;PM5;BP7\", \n",
+    "    'RUNX1': \"PS1;PM2;PM5;BP2\", \n",
+    "    'SOS1': \"PM4;PM6;PP3;BP2;BP3;BP5\", \n",
+    "    'MAP2K2': \"PM4;PM6;PP3;BP2;BP3\", \n",
+    "    'PTPN11': \"PM4;PM6;PP3;BP2;BP3\",  \n",
+    "    'TP53': \"PS1;PS2;PM6\", \n",
+    "    'RYR1': \"PS1;BP2;BP7\", \n",
+    "    'MECP2': \"PS1\", \n",
+    "    'GCK': \"PM3;PM4\", \n",
+    "    'RAF1': \"PM4;PM6;PP3;BP2;BP3\", \n",
+    "    'MAP2K1': \"PM4;PM6;PP3;BP2;BP3\", \n",
+    "    'CDKL5': \"PVS1;PS1\", \n",
+    "    'ETHE1': \"PVS1;PS1;PS2;PS3;PM3;PM4;PM5;PM6;BS2;BS3;BS4;BP2;BP3;BP5;BP7\", \n",
+    "    'MTOR': \"PS1;PM5;BP2;BP5\", \n",
+    "    'PTEN': \"PP2\", \n",
+    "    'SHOC2': \"PM4;PM6;PP3;BP2;BP3\", \n",
+    "    'APC': \"BP1;BP5\", \n",
+    "    'PALB2': \"\", \n",
+    "    'MYO6': \"PVS1;PS1;PS2;PM4;PP4;BP3;BP7\", \n",
+    "    'SLC26A4': \"PVS1;PS1;PS2;PM4;PP4;BP3;BP7\", \n",
+    "    'LDLR': \"PS1;PS2;PM6\", \n",
+    "    'HNF1A': \"PS1;PM4;PM5\", \n",
+    "    'COCH': \"PVS1;PS1;PS2;PM4;PP4;BP3;BP7\", \n",
+    "    'USH2A': \"PVS1;PS1;PS2;PM4;PP4;BP3;BP7\", \n",
+    "    'ITGB3': \"PVS1;PS1;PS2;PM4;PM5;BP3;BP7\", \n",
+    "    'FOXG1': \"PS1;PM5\",\n",
+    "}\n",
+    "\n",
+    "def extract_gene(variant):\n",
+    "    match = re.search(r'\\((.*?)\\)', variant)\n",
+    "    return match.group(1) if match else None\n",
+    "\n",
+    "def update_kappa_df(kappa_df, results_df):\n",
+    "    kappa_df['Number of Variants'] = 0\n",
+    "    kappa_df['Number of Genes'] = 0\n",
+    "    kappa_df['Variants with Criteria in Gene'] = 0\n",
+    "    \n",
+    "    for i, row in kappa_df.iterrows():\n",
+    "        criteria = row['Criteria']\n",
+    "        \n",
+    "        # Extract variants and genes with the criteria\n",
+    "        variants_with_criteria = results_df[results_df['Expected Criteria'].str.contains(criteria, na=False)]\n",
+    "        gene_list = variants_with_criteria['Variant'].apply(extract_gene).dropna().unique()\n",
+    "        \n",
+    "        # Count the number of variants and genes with the criteria\n",
+    "        kappa_df.at[i, 'Number of Variants'] = len(variants_with_criteria)\n",
+    "        kappa_df.at[i, 'Number of Genes'] = len(gene_list)\n",
+    "        \n",
+    "        # Count the number of variants where the criteria is in the gene dictionary\n",
+    "        count_criteria_in_gene = 0\n",
+    "        for variant in variants_with_criteria['Variant']:\n",
+    "            gene = extract_gene(variant)\n",
+    "            if gene and gene in VCEP_NO_EFFECT:\n",
+    "                if criteria in VCEP_NO_EFFECT[gene]:\n",
+    "                    count_criteria_in_gene += 1\n",
+    "        \n",
+    "        kappa_df.at[i, 'Variants with Criteria in Gene'] = count_criteria_in_gene\n",
+    "    \n",
+    "    return kappa_df\n",
+    "\n",
+    "df_plus = update_kappa_df(kappa_df, df)\n",
+    "df_plus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b472dbf0",
+   "metadata": {},
+   "source": [
+    "### Other help functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "41e54faf-0908-49de-a001-f3958ba9015d",
